preliminary verison of pipeline progress tester working

--- a/docs/Untitled2.ipynb
+++ b/docs/Untitled2.ipynb
@@ -198,14 +198,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pyham\n",
+    "\n",
+    "orthologous_groups_fasta = os.path.join('/Users/daviddylus/Research/pore2tree/pore2tree/tests/oma_standalone/Output/', \"OrthologousGroupsFasta\")\n",
+    "og_orthoxml = os.path.join('/Users/daviddylus/Research/pore2tree/pore2tree/tests/oma_standalone/Output/', 'OrthologousGroups.orthoxml')\n",
+    "tree_str = os.path.join('/Users/daviddylus/Research/pore2tree/pore2tree/tests/oma_standalone/Output/', 'EstimatedSpeciesTree.nwk')\n",
+    "\n",
+    "ham_analysis = pyham.Ham(tree_str, og_orthoxml, use_internal_name=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bla = 0\n",
+    "hog_dict = ham_analysis.get_dict_top_level_hogs()\n",
+    "for hog,value in ham_analysis.get_dict_top_level_hogs().items():\n",
+    "    if len(value.get_all_descendant_genes()) >= 6:\n",
+    "        bla += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<pyham.genome.AncestralGenome at 0x1152b7908>,\n",
+       " <pyham.genome.AncestralGenome at 0x1152b79e8>,\n",
+       " <pyham.genome.AncestralGenome at 0x1152b7a90>,\n",
+       " <pyham.genome.AncestralGenome at 0x1152b7978>,\n",
+       " <pyham.genome.AncestralGenome at 0x1152b7be0>,\n",
+       " <pyham.genome.AncestralGenome at 0x1152b7b00>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ham_analysis.get_list_ancestral_genomes()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "x = [1, 2, 3]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
