--- a/docs/Untitled2.ipynb
+++ b/docs/Untitled2.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -241,21 +241,22 @@
     {
      "data": {
       "text/plain": [
-       "[<pyham.genome.AncestralGenome at 0x1152b7908>,\n",
-       " <pyham.genome.AncestralGenome at 0x1152b79e8>,\n",
-       " <pyham.genome.AncestralGenome at 0x1152b7a90>,\n",
-       " <pyham.genome.AncestralGenome at 0x1152b7978>,\n",
-       " <pyham.genome.AncestralGenome at 0x1152b7be0>,\n",
-       " <pyham.genome.AncestralGenome at 0x1152b7b00>]"
+       "[<pyham.genome.ExtantGenome at 0x113c254a8>,\n",
+       " <pyham.genome.ExtantGenome at 0x114fff160>,\n",
+       " <pyham.genome.ExtantGenome at 0x114ab9fd0>,\n",
+       " <pyham.genome.ExtantGenome at 0x114d44208>,\n",
+       " <pyham.genome.ExtantGenome at 0x113914f98>,\n",
+       " <pyham.genome.ExtantGenome at 0x114385d68>,\n",
+       " <pyham.genome.ExtantGenome at 0x114018d30>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ham_analysis.get_list_ancestral_genomes()"
+    "ham_analysis.get_list_extant_genomes()"
    ]
   },
   {
