addition of sampling script and fixing of ngm wrapper

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## This is a debuging ipython notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -13,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Namespace(dna_reference='/Volumes/Untitled/OmaServer.h5', min_species=6, output_path='/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/', reads='/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/reads/example.fastq', ref_folder=None, ref_og_aa_folder='.', reference=False, standalone_path='/Users/daviddylus/Research/pore2tree/pore2tree/tests/')\n"
+      "Namespace(dna_reference='/Users/daviddylus/Downloads/eukaryotes.cdna.fa', min_species=5, output_path='/Volumes/Untitled/test_run4/', reads='/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test3/test_1.fq /Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test3/test_2.fq', ref_folder=None, ref_og_aa_folder='.', reference=False, remove_species=None, single_mapping=None, standalone_path='/Users/daviddylus/Research/pore2tree/pore2tree/tests/oma_standalone/', threads=None)\n"
      ]
     }
    ],
@@ -38,9 +48,21 @@
     "arg_parser.add_argument('--standalone_path', default='/Users/daviddylus/Research/pore2tree/reference_datasets/Dataset1/',\n",
     "                            help='[Default is current directory] Path to '\n",
     "                                 'oma standalone directory.', required=True)\n",
+    "arg_parser.add_argument('--remove_species', default=None,\n",
+    "                            help='Remove species present in dataset and only do analysis on '\n",
+    "                                 'subset of species')\n",
+    "\n",
     "\n",
     "arg_parser.add_argument('--ref_og_aa_folder', default='.',\n",
     "                            help='Path to preselected og_aa folder')\n",
+    "\n",
+    "arg_parser.add_argument('--single_mapping', default=None,\n",
+    "                            help='Single species file allowing to map in a job array.')\n",
+    "\n",
+    "arg_parser.add_argument('--threads', type=int, default=None,\n",
+    "                            help='Number of threads for the mapping using ngm / ngmlr!')\n",
+    "\n",
+    "\n",
     "\n",
     "    # Arguments to generate the reference\n",
     "arg_parser.add_argument('-r', '--reference', action='store_true',\n",
@@ -56,13 +78,14 @@
     "                            help='Folder containing reference files with sequences sorted by species.')\n",
     "arg_parser.add_argument('--reads', default='/Users/daviddylus/Research/pore2tree/fritz_scripts/pipeline/Nano_reads/ERR1877969.fastq',\n",
     "                            help='Reads to be mapped to reference.')\n",
+    "# arg_parser.add_argument('--reads', nargs='2',default=None, help='Reads to be mapped to reference.')\n",
     "\n",
     "\n",
     "# Parse the arguments.\n",
     "# reference = ['--ref_folder', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/db/']\n",
-    "argv = ['--output_path','/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/','--standalone_path', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/', '--min_species', \n",
-    "        '6', '--dna_reference', '/Volumes/Untitled/OmaServer.h5',\n",
-    "        '--reads', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/reads/example.fastq']\n",
+    "argv = ['--output_path','/Volumes/Untitled/test_run4/','--standalone_path', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/oma_standalone/', '--min_species', \n",
+    "        '5', '--dna_reference', '/Users/daviddylus/Downloads/eukaryotes.cdna.fa',\n",
+    "        '--reads', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test3/test_1.fq /Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test3/test_2.fq']\n",
     "args = arg_parser.parse_args(argv)\n",
     "print(args)"
    ]
@@ -80,13 +103,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 100%|██████████| 6428/6428 [04:45<00:00, 22.53 OGs/s] \n"
+      "Loading files for pre-filter: 100%|██████████| 6428/6428 [00:13<00:00, 492.78 OGs/s]\n"
      ]
     }
    ],
    "source": [
-    "from pore2tree import OGSet\n",
-    "ogs = OGSet.OGSet(args)"
+    "from pore2tree.parser import OMAOutputParser\n",
+    "oma_output = OMAOutputParser(args)\n",
+    "args.oma_output_path = oma_output.oma_output_path"
    ]
   },
   {
@@ -99,21 +123,100 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading records: 100%|██████████| 3309/3309 [00:00<00:00, 33882.17 record/s]\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "from pore2tree import ReferenceSet\n",
-    "ref = ReferenceSet.ReferenceSet(args,ogset=ogs.ogs)"
+    "from pore2tree.Progress import Progress\n",
+    "progress = Progress(args, oma_output)\n",
+    "print(progress.status)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading files: 4 OGs [00:00, 35.30 OGs/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Re-load ogs and find their corresponding DNA seq from output folder ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading files: 4111 OGs [00:57, 71.71 OGs/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from pore2tree.OGSet import OGSet\n",
+    "if progress.status >= 1:\n",
+    "    ogset = OGSet(args, oma_output, load=False)\n",
+    "else:\n",
+    "    ogset = OGSet(args, oma_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading references for mapping from folder:  14%|█▍        | 1/7 [00:00<00:00,  7.12 species/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Generating reference for mapping from folder ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:01<00:00,  5.17 species/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pore2tree.ReferenceSet import ReferenceSet\n",
+    "if progress.status >= 2:\n",
+    "    reference = ReferenceSet(args, load=False)\n",
+    "else:\n",
+    "    reference = ReferenceSet(args, og_set=ogset.ogs, load=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -125,45 +228,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Mapping reads to species: 100%|██████████| 7/7 [00:27<00:00,  3.89s/ species]\n"
+      "\r",
+      "Mapping reads to species:   0%|          | 0/7 [00:00<?, ? species/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Mapping of reads to reference sequences ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Mapping reads to species: 100%|██████████| 7/7 [05:16<00:00, 43.58s/ species]\n"
      ]
     }
    ],
    "source": [
     "# %load_ext autoreload\n",
-    "%autoreload\n",
-    "from pore2tree import Mapper\n",
-    "mapper = Mapper.Mapper(args, ref_set=ref.ref, og_set=ogs.ogs)"
+    "#%autoreload\n",
+    "from pore2tree.Mapper import Mapper\n",
+    "if progress.status >= 3:\n",
+    "    mapper = Mapper(args, og_set=ogset.ogs, load=False)\n",
+    "else:\n",
+    "    mapper = Mapper(args, ref_set=reference.ref, og_set=ogset.ogs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "new_ogs = ogs.add_mapped_seq(mapper.og_records)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Aligning OGs : 100%|██████████| 38/38 [00:29<00:00,  1.12s/ OG]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "new_ogs = ogset.add_mapped_seq(mapper.og_records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
    "source": [
     "%reload_ext autoreload \n",
     "%autoreload 2 \n",
@@ -173,9 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -184,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,21 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(CANAW:0.07145,LODEL:0.11563,(SPAPN:0.07128,(PICST:0.07019,(DEBHA:0.08368,(CANTE:0.11326,(UNKNO:2.14359,YEAST:0.2617)0.923:0.01286)1.000:0.02966)1.000:0.0291)1.000:0.03407)1.000:0.03076)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(tree.tree)"
    ]
