deleted unnecessary files

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -278,12 +278,35 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Aligning OGs :   0%|          | 0/1909 [00:00<?, ? OG/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Alignment of OGs ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Aligning OGs :  11%|█         | 206/1909 [01:48<07:56,  3.58 OG/s]"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload \n",
     "%autoreload 2 \n",
     "from pore2tree import Aligner\n",
-    "alignments = Aligner.Aligner(args, ogs.mapped_ogs)"
+    "alignments = Aligner.Aligner(args, ogset.mapped_ogs)"
    ]
   },
   {
