--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -298,7 +298,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Aligning OGs :  11%|█         | 206/1909 [01:48<07:56,  3.58 OG/s]"
+      "Aligning OGs :  37%|███▋      | 705/1909 [05:49<12:22,  1.62 OG/s]"
      ]
     }
    ],
