better species name handling

--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
 * add better error handling when mapping doesn't work
+* tables needs hdf5 dependencies
+* some git repositories are difficult to access
