better handling of sequence selection by coverage

--- a/docs/Untitled-Copy1.ipynb
+++ b/docs/Untitled-Copy1.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -371,30 +371,41 @@
      "output_type": "stream",
      "text": [
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_10X_0\n",
-      "0.30892088374479326\n",
+      "0.308920883745\n",
+      "0.265393773439\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_02X_0_0\n",
-      "0.3870602588528758\n",
+      "0.387060258853\n",
+      "0.294853996237\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_03X_0_0\n",
-      "0.4943459068699639\n",
+      "0.49434590687\n",
+      "0.313991264419\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_20X_0_0\n",
-      "0.7367354340405972\n",
+      "0.736735434041\n",
+      "0.266107250539\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_30X_0_0\n",
-      "0.33473355881327294\n",
+      "0.334733558813\n",
+      "0.271602544251\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_04X_0_0\n",
-      "0.4074008119696601\n",
+      "0.40740081197\n",
+      "0.291322493089\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_09X_0_0\n",
-      "0.3905378725765558\n",
+      "0.390537872577\n",
+      "0.298464762367\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_1\n",
-      "0.4887434789065503\n",
+      "0.488743478907\n",
+      "0.30161961723\n",
       "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171076_01X_0_0\n",
-      "0.3086661740868779\n",
-      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171080_1\n",
-      "0.552586543604898\n"
+      "0.308666174087\n",
+      "0.262994928859\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/05_align_SRR5171080_1_bak\n",
+      "0.552586543605\n",
+      "0.252073966158\n"
      ]
     }
    ],
    "source": [
     "from Bio import AlignIO\n",
+    "import numpy as np\n",
     "import re\n",
     "\n",
     "for folder in glob.iglob(output_path+'/05_*', recursive=True):\n",
@@ -409,10 +420,75 @@
     "                xx = seq.count(\"X\")\n",
     "                aa = len(seq)-xx\n",
     "                all_coverages.append((aa/len(seq)))\n",
-    "    print(sum(all_coverages)/len(all_coverages))\n",
+    "    np_all_coverages = np.array(all_coverages)\n",
+    "    print(np.mean(np_all_coverages))\n",
+    "    print(np.std(np_all_coverages))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_10X_0\n",
+      "0.308920883745\n",
+      "0.265393773439\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_01X_0_0\n",
+      "0.308666174087\n",
+      "0.262994928859\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_02X_0_0\n",
+      "0.387060258853\n",
+      "0.294853996237\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_03X_0_0\n",
+      "0.49434590687\n",
+      "0.313991264419\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_20X_0_0\n",
+      "0.736735434041\n",
+      "0.266107250539\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_30X_0_0\n",
+      "0.334733558813\n",
+      "0.271602544251\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_04X_0_0\n",
+      "0.40740081197\n",
+      "0.291322493089\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_09X_0_0\n",
+      "0.390537872577\n",
+      "0.298464762367\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_1\n",
+      "0.488743478907\n",
+      "0.30161961723\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171080_1_bak\n",
+      "0.552586543605\n",
+      "0.252073966158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "import numpy as np\n",
+    "import re\n",
     "\n",
+    "for folder in glob.iglob(output_path+'/04_*', recursive=True):\n",
+    "    print(folder)\n",
+    "    all_coverages = []\n",
     "\n",
-    "\n"
+    "    for file in glob.iglob(folder+'/*.fa'):\n",
+    "        align = SeqIO.parse(file, \"fasta\")\n",
+    "        for record in align:\n",
+    "            if 'SRR51' in record.id:\n",
+    "#                 seq = re.sub('-', '', str(record.seq))\n",
+    "                xx = str(record.seq).count(\"X\")\n",
+    "                aa = len(record.seq)-xx\n",
+    "                all_coverages.append((aa/len(record.seq)))\n",
+    "    np_all_coverages = np.array(all_coverages)\n",
+    "    print(np.mean(np_all_coverages))\n",
+    "    print(np.std(np_all_coverages))"
    ]
   },
   {
