made status file such that it is possible to map multiple set of reads to same reference set

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -23,8 +23,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Namespace(dna_reference='/Volumes/Untitled/eukaryotes.cdna.fa', min_species=5, output_path='/Users/daviddylus/Desktop/test1/', reads='/Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_1a.fq /Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_2a.fq', ref_folder=None, ref_og_aa_folder='.', reference=False, remove_species=None, single_mapping=None, standalone_path='/Users/daviddylus/Research/read2tree/read2tree/tests/oma_standalone/', threads=None)\n"
      ]
     }
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -105,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "2\n"
      ]
     }
    ],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 39 OGs [00:00, 313.37 OGs/s]"
+      "Loading files: 16 OGs [00:00, 157.84 OGs/s]"
      ]
     },
     {
@@ -142,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 4111 OGs [00:06, 593.56 OGs/s]\n"
+      "Loading files: 4111 OGs [00:09, 436.88 OGs/s]\n"
      ]
     }
    ],
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -170,7 +168,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 11.98 species/s]"
+      "Loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 16.17 species/s]"
      ]
     },
     {
@@ -184,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00,  9.21 species/s]\n"
+      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00, 11.06 species/s]\n"
      ]
     }
    ],
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Mapping reads to species: 100%|██████████| 7/7 [01:03<00:00,  9.18s/ species]\n"
+      "Mapping reads to species:  86%|████████▌ | 6/7 [00:51<00:08,  8.61s/ species]"
      ]
     }
    ],
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
