remove species option should only effect the reconstruction and therefore was removed from initial steps

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -223,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Mapping reads to species:  86%|████████▌ | 6/7 [00:51<00:08,  8.61s/ species]"
+      "Mapping reads to species: 100%|██████████| 7/7 [01:00<00:00,  8.75s/ species]\n"
      ]
     }
    ],
