fixed removal of species function

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Namespace(dna_reference='/Volumes/Untitled/eukaryotes.cdna.fa', min_species=5, output_path='/Users/daviddylus/Desktop/test1/', reads='/Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_1a.fq /Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_2a.fq', ref_folder=None, ref_og_aa_folder='.', reference=False, remove_species=None, single_mapping=None, standalone_path='/Users/daviddylus/Research/read2tree/read2tree/tests/oma_standalone/', threads=None)\n"
+      "Namespace(dna_reference='/Volumes/Untitled/eukaryotes.cdna.fa', min_species=5, output_path='/Users/daviddylus/Desktop/test1/', reads='/Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_1a.fq /Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_2a.fq', ref_folder=None, ref_og_aa_folder='.', reference=False, remove_species='CANAW,YEAST', single_mapping=None, standalone_path='/Users/daviddylus/Research/read2tree/read2tree/tests/oma_standalone/', threads=None)\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "# Parse the arguments.\n",
     "# reference = ['--ref_folder', '/Users/daviddylus/Research/pore2tree/pore2tree/tests/mapper/test1/db/']\n",
     "argv = ['--output_path','/Users/daviddylus/Desktop/test1/','--standalone_path', '/Users/daviddylus/Research/read2tree/read2tree/tests/oma_standalone/', '--min_species', \n",
-    "        '5', '--dna_reference', '/Volumes/Untitled/eukaryotes.cdna.fa',\n",
+    "        '5', '--dna_reference', '/Volumes/Untitled/eukaryotes.cdna.fa', '--remove_species', 'CANAW,YEAST',\n",
     "        '--reads', '/Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_1a.fq /Users/daviddylus/Research/read2tree/read2tree/tests/mapper/test3/test_2a.fq']\n",
     "args = arg_parser.parse_args(argv)\n",
     "print(args)"
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "3\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 16 OGs [00:00, 157.84 OGs/s]"
+      "Loading files: 238 OGs [00:00, 2357.84 OGs/s]"
      ]
     },
     {
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 4111 OGs [00:09, 436.88 OGs/s]\n"
+      "Loading files: 4111 OGs [00:01, 2215.75 OGs/s]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 16.17 species/s]"
+      "Loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 16.00 species/s]"
      ]
     },
     {
@@ -182,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00, 11.06 species/s]\n"
+      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00, 10.87 species/s]\n"
      ]
     }
    ],
@@ -208,22 +208,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "Mapping reads to species:   0%|          | 0/7 [00:00<?, ? species/s]"
+      "Loading consensus read mappings : 100%|██████████| 7/7 [00:00<00:00, 428.32 species/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Mapping of reads to reference sequences ---\n"
+      "--- Retrieve mapped consensus sequences ---\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Mapping reads to species: 100%|██████████| 7/7 [01:00<00:00,  8.75s/ species]\n"
+      "\n"
      ]
     }
    ],
@@ -239,15 +238,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'get_best_mapping_by_coverage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-de737bc9c9f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_ogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mogset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_mapped_seq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mog_records\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/daviddylus/.pyenv/versions/3.5.1/envs/notebook3/lib/python3.5/site-packages/read2tree-0.0.1-py3.5.egg/read2tree/OGSet.py\u001b[0m in \u001b[0;36madd_mapped_seq\u001b[0;34m(self, mapped_og_set)\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0mfiltered_aa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove_species_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspecies_to_remove\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_aa\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m                 \u001b[0mbest_record_aa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiltered_aa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_best_mapping_by_coverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m                 \u001b[0mbest_record_aa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_species_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmapped_ogs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'get_best_mapping_by_coverage'"
+     ]
+    }
+   ],
    "source": [
     "new_ogs = ogset.add_mapped_seq(mapper.og_records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bla = ['x','a','y','d']\n",
+    "blub = ['y','a','d','a']\n",
+    "rem = ['x','a']\n",
+    "ind = []\n",
+    "for i,letter in enumerate(zip(bla,blub)):\n",
+    "    print(letter[0])\n",
+    "    if letter[0] in rem:\n",
+    "        ind.append(i)\n",
+    "        \n",
+    "print([i for j, i in enumerate(bla) if j not in ind])\n",
+    "# print(zip(bla,blub)[0])"
    ]
   },
   {
