--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -126,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 238 OGs [00:00, 2357.84 OGs/s]"
+      "Loading files: 239 OGs [00:00, 2387.97 OGs/s]"
      ]
     },
     {
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 4111 OGs [00:01, 2215.75 OGs/s]\n"
+      "Loading files: 4111 OGs [00:01, 2168.61 OGs/s]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 16.00 species/s]"
+      "Re-loading references for mapping from folder:  29%|██▊       | 2/7 [00:00<00:00, 14.98 species/s]"
      ]
     },
     {
@@ -182,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00, 10.87 species/s]\n"
+      "Re-loading references for mapping from folder: 100%|██████████| 7/7 [00:00<00:00, 10.70 species/s]\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading consensus read mappings : 100%|██████████| 7/7 [00:00<00:00, 428.32 species/s]"
+      "Loading consensus read mappings : 100%|██████████| 7/7 [00:00<00:00, 387.44 species/s]"
      ]
     },
     {
@@ -244,20 +244,7 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'get_best_mapping_by_coverage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-de737bc9c9f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_ogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mogset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_mapped_seq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mog_records\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/daviddylus/.pyenv/versions/3.5.1/envs/notebook3/lib/python3.5/site-packages/read2tree-0.0.1-py3.5.egg/read2tree/OGSet.py\u001b[0m in \u001b[0;36madd_mapped_seq\u001b[0;34m(self, mapped_og_set)\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0mfiltered_aa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove_species_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspecies_to_remove\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_aa\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m                 \u001b[0mbest_record_aa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiltered_aa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_best_mapping_by_coverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m                 \u001b[0mbest_record_aa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_species_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmapped_ogs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'get_best_mapping_by_coverage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_ogs = ogset.add_mapped_seq(mapper.og_records)"
    ]
