try except statements for nucleotide database, in case the entry does not exists

--- a/docs/Untitled-Copy1.ipynb
+++ b/docs/Untitled-Copy1.ipynb
@@ -303,31 +303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading OGs : 495 ogs [00:04, 105.81 ogs/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "495"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from tqdm import tqdm\n",
@@ -356,11 +338,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daviddylus/.pyenv/versions/3.5.1/envs/notebook3/lib/python3.5/site-packages/tables/leaf.py:396: PerformanceWarning: The Leaf ``/Protein/_i_Entries/OmaHOG/sorted`` is exceeding the maximum recommended rowsize (104857600 bytes);\n",
+      "be ready to see PyTables asking for *lots* of memory and possibly slow\n",
+      "I/O.  You may want to reduce the rowsize by trimming the value of\n",
+      "dimensions that are orthogonal (and preferably close) to the *main*\n",
+      "dimension of this leave.  Alternatively, in case you have specified a\n",
+      "very small/large chunksize, you may want to increase/decrease it.\n",
+      "  PerformanceWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tables import *\n",
+    "from pyoma.browser import db\n",
+    "import glob\n",
+    "from Bio import SeqIO, Seq, SeqRecord\n",
+    "\n",
+    "h5_file = open_file(\"/Users/daviddylus/mnt/omabrowser/OmaServer.h5\", mode=\"r\")\n",
+    "bdb = db.Database(h5_file)\n",
+    "bdb_id_map = db.OmaIdMapper(bdb)\n",
+    "bdb_source = 'h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blub\n"
+     ]
+    }
+   ],
+   "source": [
+    "species_list = [row['UniProtSpeciesCode'].decode(\"utf-8\") for row in bdb_id_map.genome_table]\n",
+    "\n",
+    "if 'CANAV' in species_list:\n",
+    "    print('bla')\n",
+    "else:\n",
+    "    print('blub')\n",
+    "\n",
+    "# print(species_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n",
+      "here\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for file in glob.iglob(\"/Users/daviddylus/Research/read2tree/read2tree/tests/marker_genes/*.fa\"):\n",
+    "    map_rec = SeqIO.parse(file, \"fasta\")\n",
+    "    for record in map_rec:\n",
+    "        species = record.description[record.description.find(\"[\") + 1:record.description.find(\"]\")]\n",
+    "        if len(species.split(\" \")) > 1:\n",
+    "            new_id = species.split(\" \")[0][0:3] + species.split(\" \")[1][0:2]\n",
+    "            species = new_id.upper()\n",
+    "        if species in species_column:\n",
+    "            print('here')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
