added condition in case that mapping seq removal returns empty

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -132,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading files: 5 OGs [00:00, 607.39 OGs/s]"
+      "Loading files: 5 OGs [00:00, 573.26 OGs/s]"
      ]
     },
     {
@@ -174,7 +174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Re-loading references for mapping from folder: 100%|██████████| 20/20 [00:00<00:00, 5080.00 species/s]"
+      "Re-loading references for mapping from folder: 100%|██████████| 20/20 [00:00<00:00, 4740.67 species/s]"
      ]
     },
     {
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading consensus read mappings : 100%|██████████| 6/6 [00:00<00:00, 4881.83 species/s]"
+      "Loading consensus read mappings : 100%|██████████| 6/6 [00:00<00:00, 5381.91 species/s]"
      ]
     },
     {
@@ -255,14 +255,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Adding mapped seq to OG: 100%|██████████| 5/5 [00:00<00:00, 3109.66 OGs/s]"
+      "Adding mapped seq to OG: 100%|██████████| 5/5 [00:00<00:00, 2602.89 OGs/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Add inferred mapped sequence back to OGs /Users/daviddylus/mnt/omabrowser/OmaServer.h5 ---\n"
+      "--- Add inferred mapped sequence back to OGs ---\n"
      ]
     },
     {
